format stats service for better readability